# esbmtk

./: .coveragerc  .gitattributes  .gitignore  .projectile  .readthedocs.yaml  .ruff.toml  .sourcery.yaml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.org  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  GITHUB_RELEASE_BODY.md  LICENSE  LICENSE.txt  README.md  README.org  README.rst  RELEASE_CHECKLIST.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES_v0.14.2.8.md  RELEASE_README.md  RELEASE_SUMMARY.md  Release_History.md  Release_History.org  esbmtk.org  esbmtk.py  index.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  utility_functions.py
.ipynb_checkpoints/: Scratch-checkpoint.ipynb  sea-level-checkpoint.ipynb  text_external-data-checkpoint.ipynb
Code/: esbmtk.org  esbmtk.py
Documentation/: Adding_your_own_Processes.org  C_Cycle_Ocean.csv  C_Cycle_Ocean.py  ESBMTK-Quick-Start_Guide.ipynb  ESBMTK-Quick-Start_Guide.md  ESBMTK-Quick-Start_Guide.org  esbmtk.py  po4_1.py  test-data.csv
Examples/A simple carbon cycle example/: C_Cycle_Ocean.csv  C_cycle.ipynb  C_cycle.org  ocean.py  test-data.csv
Examples/Using a rate constant/: esbmtk.py  rate_example.ipynb  rate_example.org  rate_example.py
docs/: .directory  ESBMTK-Tutorial.ipynb  ESBMTK-Tutorial.md  ESBMTK-Tutorial.org  ESBMTK-Tutorial.rst  citation.rst  conf.py  esbmtk.html  index.html  index.rst  po4_1.py  po4_1_with_signal.py  requirements.txt  search.js
docs/_minted-ESBMTK-Tutorial/: 33AE2591B712B0E131E31407CA858506073103699B84A8F267D0D1641915DD4D.pygtex  50A8FD90FD8AB9E47843726C90BCBAE3073103699B84A8F267D0D1641915DD4D.pygtex  5556194618C056B33ACD545FB2AA5C34073103699B84A8F267D0D1641915DD4D.pygtex  68F64ABF7194E9240425F7ABDBABFE78073103699B84A8F267D0D1641915DD4D.pygtex  72390EF5EF87A189D35A255159225827073103699B84A8F267D0D1641915DD4D.pygtex  9BA662F4038849E0890178FD9C93EB03073103699B84A8F267D0D1641915DD4D.pygtex  AE05DB4CC61AB59540C2D8A364FFF0BD073103699B84A8F267D0D1641915DD4D.pygtex  C2CD418818A642F80CCEDCD772B9CDCA073103699B84A8F267D0D1641915DD4D.pygtex  C33D453DD82D4652876EDB778DC9D9EF073103699B84A8F267D0D1641915DD4D.pygtex  C656A5809ABA5578E35053638B0F64C3073103699B84A8F267D0D1641915DD4D.pygtex  CCD47AD0D6E32E033E89139C344143CD073103699B84A8F267D0D1641915DD4D.pygtex  CDBFF7DAE4507186E8BF97CB583CCD86073103699B84A8F267D0D1641915DD4D.pygtex  E29523D443944753F741B3E99034149A073103699B84A8F267D0D1641915DD4D.pygtex  E7EC3A5937913DEF268617723DB6D786073103699B84A8F267D0D1641915DD4D.pygtex
docs/esbmtk/: Constructor.html  Equation_Terms.html  ODEINT_Solver.html  carbonate_chemisrty.html  carbonate_chemistry.html  carbonate_chemistry_2.html  connections.html  esbmtk.html  esbmtk_base.html  extended_classes.html  index.html  odeuli2.html  processes.html  scratch.html  sealevel.html  solver.html  species_definitions.html  utility_functions.html
docs/manual/: equations.py  iso3_test.py  iso4_test.py  iso_1.py  iso_2.py  iso_3.py  iso_4.py  iso_5.py  manual-1.org  manual-1.rst  manual-2.org  manual-2.rst  manual-3.org  manual-3.rst  manual-4.org  manual-4.rst  manual-5.org  manual-5.rst  manual-6.md  manual-6.org  manual-6.rst  manual.org  manual.rst  manual3.org  manual3.rst  model1.d2  model2.d2  po4_1.py  po4_1_with_signal.py  po4_2.py  po4_3.py  po4_4.py  prep_files.sh  related.org  related.rst  source.org  source.rst  test_iso4.py
esbmtk/: Constructor.py  Constructor1.py  Equation_Terms.py  Equation_Terms1.py  Equation_Terms_old.py  ODEINT_Solver.py  ODEINT_Solver_old.py  TAGS  __init__.py  _version.py  add_functions.py  base_class.org  base_class.py  bio-geochemical-reactions.py  bio_geochemical_reactions.py  carbonate_chemisrty.org  carbonate_chemisrty.py  carbonate_chemistry.org  carbonate_chemistry.py  carbonate_chemistry_2.py  class_templates.org  class_templates.py  connections.org  connections.py  depreceated_code.py  esbmtk.org  esbmtk.py  esbmtk_base.py  extended_classes.py  function_defs.py  init_functions.py  ode_backend.py  ode_backend_2.py  odeint_uli.py  odeuli2.py  post_processing.py  processes-old.py  processes.org  processes.py  sealevel.org  (+7 more)
esbmtk	/: defaults.org  defaults.py  esbmtk.org  esbmtk.py
esbmtk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
esbmtk/experimental_reactions/: add_functions.py
esbmtk/images/: 20210208-151424_beamertest.org
esbmtk/reactions/: add_functions.py  bio_geochemical_reactions.py  init_functions.py
examples/: Hypsometric_Curve_05m.csv  README.md  README.org  hypsometry.py  my_functions.py  po4_1.py  po4_1_with_signal.py  po4_2.py  po4_2_with_isotopes.py  seawater_example.py  user_defined_functions.py
examples/equilibration/: .#equi4.org  equi4.org  equi4.py
examples/fractionation/: fractionation.org  fractionation.py
examples/one-box-ocean/: C_Cycle_Ocean.csv  (+4 more)
tests/: C_Cycle_Ocean.csv  boudreau_2010_test.py  boudreau_cs3_test.py  boudreau_isotopes_test.py  burial_signal_epsilon_only_from_csv_data.csv  burial_signal_from_csv_data.csv  burial_signal_isotopes_from_csv_data.csv  burial_signal_isotopes_mixed_units_from_csv_data.csv  conftest.py  connection_signal_scaling_test.py  delta_regular_test.py  delta_scale_with_concentration_test.py  delta_scale_with_flux_test.py  epsilon_regular_test.py  epsilon_scale_with_concentration_test.py  epsilon_scale_with_flux_test.py  eqs_new.py  esbmtk.py  esbmtk_tests.org  external_test_data.csv  external_test_data_DIC.csv  ferrari_cs4_test.py  iso2_test.py  iso3_test.py  iso4_test.py  measured_c_isotopes.csv  ocean.py  pH_test.py  po4_1_test.py  po4_2_test.py  po4_3_test.py  po4_4_test.py  signal_burial_epsilon_only_test.py  signal_burial_isotopes_mixed_units_test.py  signal_burial_isotopes_test.py  signal_burial_test.py  signal_from_csv_data.csv  signal_from_csv_data_isotopes.csv  signal_from_csv_data_reverse.csv  signal_from_csv_isotopes_reverse_test.py  (+38 more)
tests2/: delta_scale_with_concentration_test.py  delta_scale_with_flux_test.py  epsilon_regular_test.py  epsilon_scale_with_flux_test.py  equations_matrices.npz  staging2.npz  test_epsilon_regular.py  test_epsilon_scale_with_concentration.py
(+68 files in other folders)
