[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "post-release"
local_scheme = "no-local-version"
# version_scheme = "only-version"
# git_describe_command = ["common/scripts/git-describe.sh", "esbmtk"]
# git_describe_command = "git describe --all"

[tool.ruff]
preview = true
fix = true
output-format = "pylint"
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py312"

[lint]
select = [
    # pydocstyle
    "D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

fixable = ["ALL"]
preview = true


# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
# unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[lint.pydocstyle]
convention = "numpy"

[format]
# 5. Use single quotes in `ruff format`.
quote-style = "double"