[metadata]
name= esbmtk   
version= 0.8.0.0 
author= Ulrich G. Wortmann 
license= GPL-3.0-or-later 
author_email= uli.wortmann@utoronto.ca 
description= An Earth Sciences Box Modeling Toolkit 
long_description= file: README.md
long_description_content_type = text/markdown
url= https://github.com/uliw/esbmtk 
classifiers=
         Programming Language :: Python :: 3 
         License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3) 
         Operating System :: OS Independent 
         Intended Audience :: Education 
         Intended Audience :: Science/Research 
         Topic :: Scientific/Engineering :: Chemistry 
         License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+) 

[options]
packages = find:
python >=3.9
include_package_data=True

[options.package_data]
* = esbmtk/*.csv

[bdist_wheel]
universal = 1