[metadata]
name= esbmtk   
author= Ulrich G. Wortmann 
license= GPL-3.0-or-later 
author_email= uli.wortmann@utoronto.ca 
description= An Earth Sciences Box Modeling Toolkit 
long_description= file: README.md LICENSE.md
long_description_content_type = text/markdown
url= https://github.com/uliw/esbmtk 
classifiers=
         Programming Language :: Python :: 3 
         License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3) 
         Operating System :: OS Independent 
         Intended Audience :: Education 
         Intended Audience :: Science/Research 
         Topic :: Scientific/Engineering :: Chemistry 
         License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+) 



[options]
# package_dir=
#     =esbmtk
packages = find:
python >=3.9
include_package_data=True
install_requires =
		 pandas
		 matplotlib
		 numpy
		 numba
		 pint

[options.package_data]
* = esbmtk/*.csv

[bdist_wheel]
universal = 1
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

# [versioneer]
# VCS = git
# style = pep440
# versionfile_source = ./esbmtk/_version.py
# versionfile_build = ./built/_version.py
# tag_prefix = "v-"
# parentdir_prefix ="ESBMTK-"



# [setuptools.dynamic]
# version = {attr = "esbmtk.__version__"}