# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = esbmtk
description = The Earth Science Box Modeling Toolkit
author = Ulrich G. Wortmann 
author_email = uli.wortmann@utoronto.ca
license = GPL-3.0-or-later
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/uliw/esbmtk
# Add here related links, for example:
project_urls =
    Documentation = https://esbmtk.readthedocs.io/en/latest/
    Source = https://github.com/uliw/esbmtk
    Changelog = https://github.com/uliw/esbmtk/blob/master/CHANGELOG.rst
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers=
         Programming Language :: Python :: 3 
         Operating System :: OS Independent 
         Intended Audience :: Education 
         Intended Audience :: Science/Research 
         Topic :: Scientific/Engineering :: Chemistry 

[options]
zip_safe = False
python_requires = >=3.12
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    PyCO2SYS>=1.8.3.3
    numpy
    pandas
    matplotlib
    numba	
    pint
    psutil
    scipy
    cachetools
    setuptools
    importlib-metadata
 

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
* = esbmtk/*.csv

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install esbmtk[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
#   pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = esbmtk.module:function
# For example:
# console_scripts =
#     fibonacci = esbmtk.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
#    --cov esbmtk --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = esbmtk
extensions =
    no_skeleton


[project]
license = "GPL-3.0-or-later"